# all-in-parachain

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-initiate.yml  docker-compose.yml
conf/api/: api.dockerfile
conf/frontend/: frontend.dockerfile
conf/rpc/crontab/: crontab.conf
conf/rpc/nginx/: rpc.all-in.app.conf.template
conf/rpc/nginx/templates/: rpc.all-in.app.conf.template
conf/rpc/nginx/templates-initiate/: rpc.all-in.app.conf.template
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/funding/: Cargo.toml
pallets/funding/src/: funding_trador.rs  lib.rs
pallets/marketplace_nfts/: Cargo.toml
pallets/marketplace_nfts/src/: lib.rs  nft_sale.rs  types.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: docker_run.sh
scripts/all-in-preconfig/: Cargo.toml
scripts/all-in-preconfig/src/: lib.rs  nftsale.rs  proxy_test.rs
scripts/preconfig/: Cargo.toml
scripts/preconfig/metadata/: metadata_node.scale
scripts/preconfig/src/: funding.rs  lib.rs  nftsale.rs  preconfig.rs
